--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,27 @@
   grid-template-columns: 1fr 360px 1fr;
 }
 
-.card{
+.cardBlue{ 
+  grid-row-start: 2;
+  grid-row-end: 3;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  display: flex;
+  /* background-color:rgb(36, 59, 128); */
+  background: linear-gradient(90deg,#4e63a6,#192c66);
+}
+
+.cardYellow{ 
+  grid-row-start: 2;
+  grid-row-end: 3;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  display: flex;
+  /* background-color:rgb(36, 59, 128); */
+  background: linear-gradient(45deg,yellow,red);
+}
+
+.card{ 
   grid-row-start: 2;
   grid-row-end: 3;
   grid-column-start: 2;
